# email-newsletter-axum

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: healthcheck.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
