[package]
name = "email_newsletter_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = "0.14.26"
log = "0.4.17"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
config = "0.13.3"
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.10.0"
tower-http = { version = "0.4.1", features = ["cors", "trace"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
rand = "0.8.5"


[[bin]]
path = "src/main.rs"
name = "email_newsletter_axum"
